# ai4rag

./: .gitignore  README.md  contributing.md  pyproject.toml
ai4rag/: __init__.py  version.py
ai4rag/core/: __init__.py
ai4rag/core/ai_service/: function_transformer.py  rag_service.py  rag_template.py  states.py
ai4rag/core/ai_service/nodes/: generate.py  retrieve.py
ai4rag/core/ai_service/templates/: sequential_inference_service.py  utils_templates.py
ai4rag/core/experiment/: benchmark_data.py  exception_handler.py  experiment.py  mps.py  results.py  utils.py
ai4rag/core/hpo/: base_optimiser.py  gam_opt.py  random_opt.py  utils.py
ai4rag/evaluator/: __init__.py  base_evaluator.py  unitxt_evaluator.py
ai4rag/rag/: __init__.py
ai4rag/rag/chunking/: __init__.py  base_chunker.py  langchain_chunker.py
ai4rag/rag/embedding/: base_model.py  embedding_types.py  get_embeddings.py  llama_stack.py  mocked.py  mocked_embeddings.py
ai4rag/rag/foundation_models/: base.py  base_foundation_model.py  base_model.py  foundation_model.py  utils.py
ai4rag/rag/retrieval/: __init__.py  retriever.py
ai4rag/rag/template/: base_template.py  rag_template.py
ai4rag/rag/vector_store/: base_vector_store.py  chroma.py  get_vector_store.py  llama_stack.py  utils.py  vs.py
ai4rag/search_space/: __init__.py
ai4rag/search_space/prepare/: __init__.py  input_payload_types.py  prepare_search_space.py  validation_error_decoder.py
ai4rag/search_space/src/: default_search_space.py  exceptions.py  model_props.py  models.py  parameter.py  search_space.py
ai4rag/utils/: __init__.py  constants.py  experiment_monitor.py  validators.py
ai4rag/utils/event_handler/: __init__.py  event_handler.py
dev_utils/: __init__.py  demo_script.py  file_store.py  local_event_handler.py  mocks.py  run_experiment.py  utils.py
dev_utils/docling-data-processing-pipeline/: data_loading.py  docling.Dockerfile  docling_simple.Dockerfile  process_bucket_pipeline.py  setup_docling_image.md
dev_utils/llama_stack_examples/: Llama-Stack-tools-sandbox.ipynb  indexing_llama_stack_milvus_ibm_pdf.ipynb  inference_llama_stack_milvus_ibm_pdf.ipynb
scripts/: copyright_check.sh  copyrights.txt
tests/ai4rag/core/: __init__.py
tests/ai4rag/core/experiment/: test_benchmark_data.py  test_mps.py
tests/ai4rag/core/hpo/: test_base_optimiser.py  test_gam_opt.py  test_random_opt.py  test_utils.py
tests/ai4rag/rag/: __init__.py
tests/ai4rag/rag/chunking/: __init__.py  test_base_chunker.py  test_langchain_chunker.py
tests/ai4rag/rag/foundation_models/: __init__.py  test_base.py  test_base_model.py  test_foundation_model.py  test_utils.py
tests/ai4rag/rag/vector_store/: test_chroma.py  test_get_vector_store.py  test_llama_stack.py  test_utils.py
tests/ai4rag/search_space/src/: test_parameter.py  test_search_space.py
