[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "ai4rag"
description = "Automatic and optimised RAG Pattern generator"
authors = [{ name = "IBM"}]
maintainers = [
    { name = "Jakub Walaszczyk", email = "jwalaszc@redhat.com" },
    { name = "Michal Steczko", email = "msteczko@redhat.com" },
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]
keywords = [
    "AI",
    "RAG",
    "LLM",
    "GenAI"
]
dynamic = ["version"]

dependencies = [
    "langchain==1.1.3",
    "langchain_chroma",
    "langchain-text-splitters",
    "langgraph>=1.0.4",
    "llama-stack-client==0.4.2",
    "pandas==2.2.*",
    "pydantic==2.11.0",
    "pypdf>=6.1.0",
    "unitxt~=1.26.1",
]

[project.optional-dependencies]
dev = [
    "ai4rag[test]",
    "ai4rag[code_check]",
    "beautifulsoup4",      # reading data from html
    "dotenv",
    "pypdf",               # reading data from pdf
    "ipykernel",
]

test = ["pytest", "pytest-cov", "pytest-mock", "psutil", "nbformat"]

code_check = ["pylint", "black"]

[tool.setuptools.dynamic]
version = { attr = "ai4rag.__version__" }

[tool.setuptools.packages.find]
exclude = ["tests*", "dev_utils*"]
namespaces = false


[tool.pytest.ini_options]
python_files = ["tests/*.py"]
log_cli = false
log_level = "INFO"

[tool.coverage.run]
# Skipping function templates for notebooks
omit = [
    "ai4rag/core/ai_service/templates/*.py",
    "ai4rag/search_space/prepare/validation_error_decoder.py",
    "ai4rag/core/ai_service/nodes/*.py"
]

[tool.black]
line-length = 120

[tool.pylint]
disable = ["missing-module-docstring", "too-few-public-methods"]
max-line-length = 120
max-args = 6
max-positional-arguments = 6
max-attributes = 10
